--- a/index.html
+++ b/index.html
@@ -372,6 +372,10 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <h1></h1>
 <p><img width="60%" src="images/diagram.png"></p>
 </section>
+<section id="section-10" class="slide level1">
+<h1></h1>
+<p><img src="images/docs.png"></p>
+</section>
     </div>
   </div>
 
