a few new slides

--- a/index.html
+++ b/index.html
@@ -376,6 +376,16 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <h1></h1>
 <p><img src="images/docs.png"></p>
 </section>
+
+
+<section>
+  <img width="45%" src="images/static-site.png">
+</section>
+
+<section>
+  <a href="https://airtable.com/integrations"><img style="border: thin inset black;" width="90%" src="images/automate.png"></a>
+</section>
+
     </div>
   </div>
 
