more slides coming

--- a/index.html
+++ b/index.html
@@ -377,9 +377,20 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <p><img src="images/docs.png"></p>
 </section>
 
+<section>
+  slide on how static websites differ from dynamic ones
+</section>
 
 <section>
+  many options / why gatsby was chosen
+</section>
+
+<section data-transition="none-out">
   <img width="45%" src="images/static-site.png">
+</section>
+
+<section data-transition="none-in">
+  <img width="45%" src="images/static-site-pbcore.png">
 </section>
 
 <section>
